<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.android.toma.homework_220s.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll2"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:text="@string/string_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/head2"
            android:textSize="@dimen/textSize"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/string1"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="@dimen/textSize"
            android:digits="@string/alphabet"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll3"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:text="@string/string_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/head3"
            android:textSize="@dimen/textSize"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/string2"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="@dimen/textSize"
            android:digits="@string/alphabet"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll4"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:text="@string/string_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/head4"
            android:textSize="@dimen/textSize"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/string3"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="@dimen/textSize"
            android:digits="@string/alphabet"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ll5"
        android:orientation="horizontal"
        android:weightSum="1">

        <TextView
            android:text="@string/string_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/head5"
            android:textSize="@dimen/textSize" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/string4"
            android:textAlignment="center"
            android:textSize="@dimen/textSize"
            android:digits="@string/alphabet"/>

    </LinearLayout>

    <Button
        android:text="@string/delete_duplicates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textRes"
        android:textSize="@dimen/textSize"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryText"/>


</LinearLayout>
